integration/fixtures/k8s-session-persistence/gateway-traefikservice-cookie-attrs/httproute-cookie-attrs.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gw-ts-cookie-attrs
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - whoami-ts-attrs.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sticky
      backendRefs:
        - name: ts-cookie-attrs
          kind: TraefikService
          group: traefik.io
          port: 80
