integration/fixtures/k8s-session-persistence/gateway-traefikservice-cookie-attrs/traefikservice-cookie-attrs.yaml
---
apiVersion: traefik.io/v1alpha1
kind: TraefikService
metadata:
  name: ts-cookie-attrs
  namespace: default
spec:
  weighted:
    sticky:
      cookie:
        name: ts-cookie-attrs
        httpOnly: true
        secure: true
        sameSite: strict
        path: /sticky
        domain: whoami-ts-attrs.localhost
        maxAge: 600
    services:
      - name: whoami-ts-attrs-a
        port: 80
      - name: whoami-ts-attrs-b
        port: 80
